# 2fer

./: .gitignore  .justfile  AGENTS.md  Cargo.toml  README.md  RELEASE.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  args.rs  cell.rs  error.rs  help.txt  magic.rs  main.rs  mishap.rs  table.rs  util.rs
src/formats/: csv.rs  detect.rs  format.rs  infer.rs  json.rs  json_value.rs  jsonl.rs  md.rs  mod.rs  nose.rs  parse.rs  registry.rs  sqlite.rs  xlsx.rs  yml.rs
tests/: smoke.bats  test.md  test.xlsx  test.yml
tests/mishaps/: arrow.arrow  avi.avi  avro.avro  hdf5.h5  html.html  parquet.parquet  xml.xml  zstd.zst
